# codewar

./: README.md  pyproject.toml
codewars/abbrev_name/: main.py
codewars/bmi/: main.py
codewars/complementary_DNA/: main.py
codewars/count_sheep/: main.py
codewars/fake_bin/: main.py
codewars/filtering_string/: main.py
codewars/find_needle/: main.py
codewars/fundamentals/algorithms/: two_sum.py
codewars/fundamentals/descending_order/: main.py
codewars/fundamentals/friend_or_foe/: main.py
codewars/fundamentals/greet/: main.py
codewars/fundamentals/mumbling/: main.py
codewars/printer_error/: main.py
codewars/reverse_seq/: main.py
codewars/string-camelcase/: main.py
codewars/string_arr/: main.py
hackerrank/diagonal_difference/: main.py
hackerrank/mini_max_sum/: main.py
hackerrank/plus_minus/: main.py
hackerrank/staircase/: main.py
kata/abbrev_name/: main.py
kata/better_than_average/: main.py
kata/bmi/: main.py
kata/complementary_DNA/: main.py
kata/count_by_x/: main.py
kata/count_sheep/: main.py
kata/fake_bin/: main.py
kata/filtering_string/: main.py
kata/find_needle/: main.py
kata/find_short/: main.py
kata/find_smallest_int/: main.py
kata/fundamentals/comp/: main.ts
kata/get_volume_of_cuboid/: main.py
kata/opposite_number/: main.py
kata/printer_error/: main.py
kata/remove_string_spaces/: main.py
kata/reverse_seq/: main.py
kata/string-camelcase/: main.py
kata/string_arr/: main.py
kata/string_end_with/: main.py
kata/sum_of_positive/: main.py
kata/sum_of_sum_6_kyu/: main.py
kata/zero_fuel/: main.py
(+78 files in other folders)
