[project]
name = "codewar"
version = "0.1.0"
description = "Solutions to codewars exercises, some are very poorly optimized xd"
authors = [
    { name = "Juan Perdomo [Jakepy]", email = "perdomojuan187@gmail.com" }
]
dependencies = [
    "ruff>=0.8.0",
]
readme = "README.md"
requires-python = ">= 3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["kata"]
